# rs-485

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Project Structure.md  README.md  docker-compose.yml  pyproject.toml
.github/: release-drafter.yml
.github/docker/: pi-build.Dockerfile
.github/workflows/: ci.yml  pi-builder-image.yml  pi-cross-gha.yml  pi-self-hosted.yml  pi-tauri-build.yml  release-drafter.yml  release.yml
backend/: pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_init_mysql.py
backend/src/rs485_app/: bootstrap.py  constants.py  exceptions.py  logging_config.py  main.py  settings.py
backend/src/rs485_app/api/: exception_handlers.py  middleware.py
backend/src/rs485_app/api/routers/: __init__.py  health.py  telemetry.py  ws_realtime.py
backend/src/rs485_app/domain/models/: telemetry.py
backend/src/rs485_app/infra/db/: models.py  session.py  writer.py
backend/src/rs485_app/infra/db/repositories/: device_repo.py  telemetry_repo.py
backend/src/rs485_app/infra/messaging/: event_bus_inmem.py
backend/src/rs485_app/infra/rs485/: serial_auto.py  simulator.py
backend/tests/: test_smoke.py
desktop/: AGENTS.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.pi.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: api_server.rs  backend.rs  logs.rs  main.rs  menu.rs  serial.rs  system.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: main.tsx
frontend/src/app/: hooks.ts  routes.tsx  store.ts  types.ts
frontend/src/app/slices/: configSlice.ts  devicesSlice.ts  eventsSlice.ts  managementSlice.ts  runtimeSlice.ts  uiSlice.ts
frontend/src/components/: DeviceList.tsx  KpiCard.tsx  TelemetryChart.tsx  VirtualizedMetricTable.tsx
frontend/src/lib/: api.ts  downsample_lttb.ts  eventsDb.ts  recorder.ts  tauri.ts  ws.ts
frontend/src/modules/config/components/: DeviceConfiguration.tsx
frontend/src/modules/devices/: devicesSlice.ts  types.ts
frontend/src/modules/devices/components/: DevicesPage.tsx
frontend/src/modules/events/: eventsSlice.ts  types.ts  utils.ts
frontend/src/modules/events/components/: EventsPage.tsx
frontend/src/modules/management/: managementSlice.ts  types.ts
frontend/src/modules/monitor/: runtimeSlice.ts
frontend/src/modules/monitor/components/: DeviceMonitor.tsx  SessionLogWindow.tsx
frontend/src/modules/ui/: types.ts  uiSlice.ts
frontend/src/modules/ui/components/: AppShell.tsx  IconButton.tsx  PageShell.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  RouteViews.tsx
frontend/src/shared/charts/: WebGLChart.tsx
frontend/src/shared/components/: Card.tsx  DeviceList.tsx  Pill.tsx  PrimaryButton.tsx  Select.tsx  StatTile.tsx
frontend/src/shared/lib/: api.ts  config.ts  eventsDb.ts  recorder.ts  ring.ts  ws.ts
frontend/src/shared/tables/: MetricTable.tsx
frontend/src/shared/types/: common.ts  telemetry.ts
frontend/src/styles/: global.css
