[project]
name = "rs485-enterprise-app"
version = "0.1.0"
description = "Enterprise RS-485 telemetry + realtime analytics platform"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}
authors = [{name="RS485 Team"}]

dependencies = []

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004"] # adjust later
src = ["backend/src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
