[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rs485-enterprise-app"
version = "0.1.0"
description = "Enterprise RS-485 telemetry + realtime analytics platform"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "RS485 Team" }]

dependencies = [
  "pyserial>=3.5",
]

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend/src"]

[tool.ruff.lint]
# Enterprise: keep strict & modern, but practical.
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "PL", "RUF"]
ignore = [
  "PLR0913", # too many args (common in FastAPI deps)
  "PLR2004"  # magic value comparisons (sometimes fine in routing/logic)
]

[tool.ruff.lint.per-file-ignores]
# FastAPI idiom: Query(...) in signature is valid; Ruff's B008 doesn't apply well here.
"backend/src/rs485_app/api/routers/*.py" = ["B008"]

[tool.setuptools.packages.find]
where = ["backend/src"]
include = ["rs485_app*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
