[project]
name = "rs485-app"
version = "0.1.0"
description = "RS-485 backend (FastAPI) for realtime telemetry and analytics"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "structlog>=24.1",
  "orjson>=3.10",
  "python-dotenv>=1.0",

  # Database + migrations (MySQL)
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "PyMySQL>=1.1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.10",
  "types-python-dateutil",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
