[package]
name = "rs485_command_center"
version = "0.1.0"
description = "RS-485 Command Center Desktop"
authors = ["you"]
edition = "2021"

# ✅ REQUIRED by Tauri v2 tooling (fixes: "package.metadata does not exist")
[package.metadata.tauri]
# optional but recommended
windows = [{ webviewInstallMode = { type = "downloadBootstrapper" } }]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
