[package]
name = "rs485_command_center"
version = "0.1.0"
description = "RS-485 Command Center Desktop"
authors = ["you"]
edition = "2021"

# ✅ REQUIRED by Tauri v2 tooling (fixes: "package.metadata does not exist")
[package.metadata.tauri]
# optional but recommended
windows = [{ webviewInstallMode = { type = "downloadBootstrapper" } }]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
serialport = "4"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros", "chrono", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tower-http = { version = "0.5", features = ["cors"] }
